--- a/xampp backup/htdocs/JavaScript/example4.html
+++ b/xampp backup/htdocs/JavaScript/example4.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+		<!-- this is important file -->
 <body>
 
     <h2>JavaScript Can Validate Input</h2>
@@ -20,7 +20,7 @@
             // Get the value of the input field with id="numb"
             x = document.getElementById("fname").value;
 
-            // If x is Not a Number or less than one or greater than 10
+            // If x is Not a Number or less than one or greater than 10 and 20 hello 
             if (x == "") {
                 text = "empty"
             }
