hello changed to vuygfuyf

--- a/xampp backup/htdocs/JavaScript/example4.html
+++ b/xampp backup/htdocs/JavaScript/example4.html
@@ -20,7 +20,7 @@
             // Get the value of the input field with id="numb"
             x = document.getElementById("fname").value;
 
-            // If x is Not a Number or less than one or greater than 10 and 20 hello 
+            // If x is Not a Number or less than one or greater than 10 and 20 hello ugyufuygfuygtu
             if (x == "") {
                 text = "empty"
             }
